# autoreview

./: .gitignore  claude.md  pyproject.toml
.autoreview_index/: structural.json
.autoreview_index/chroma/: chroma.sqlite3
autoreview/: cli.py
autoreview/agents/: base.py  graph.py  reviewer.py  synthesizer.py
autoreview/agents/prompts/: bug.txt  review.txt  security.txt  style.txt
autoreview/core/: github_client.py  schemas.py
autoreview/evals/: blind_runner.py  harness.py  judge.py  metrics.py  mine_bugsinpy.py  mine_clean_prs.py  mine_dataset.py  review_cli.py
autoreview/evals/dataset/: blind_results.json  bugsinpy_items.json  bugsinpy_results.json  clean_items.json  items.json  results.json  results_single_agent.json
autoreview/evals/experiments/: RESULTS.md
autoreview/indexing/: chunker.py  embedder.py  pipeline.py  structural.py  vector_store.py
autoreview/retrieval/: context_pack.py  retriever.py
autoreview/server/: app.py
autoreview/server/static/: index.html
