[project]
name = "autoreview"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "httpx",
    "pydantic>=2",
    "click",
    "rich",
    "python-dotenv",
    "tree-sitter>=0.22",
    "tree-sitter-python",
    "chromadb",
    "voyageai",
    "langgraph",
]

[project.scripts]
autoreview = "autoreview.cli:main"
